--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
               <img src="images/projects/dodge_or_die.jpg" alt="dodge1">
             </div>
             <div class="item">
-              <img src="images/projects/dodge_or_die2.jpg" alt="dodge2">
+              <img src="images/projects/dodge_or_die2.gif" alt="dodge2">
             </div>
           </div>
           <!-- Carousel Controls-->
@@ -372,6 +372,9 @@
             <div class="item">
               <img src="images/projects/fusor2.jpg" alt="fusor2">
             </div>
+            <div class="item">
+              <img src="images/projects/fusor3.gif" alt="fusor3">
+            </div>
           </div>
           <!-- Carousel Controls-->
           <a class="left carousel-control" href="#modal4-carousel" role="button" data-slide="prev">
@@ -389,7 +392,7 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="https://donutdaniel.github.io/downloads/fusor.mp3" class="btn btn-primary modal-btn">Video</a>
+          <a href="downloads/fusor.mp4" class="btn btn-primary modal-btn" download>Download Video</a>
         </div>
       </div>
     </div>
@@ -415,7 +418,7 @@
               <img src="images/projects/sketchpad.jpg" alt="sketchpad1">
             </div>
             <div class="item">
-              <img src="images/projects/sketchpad2.jpg" alt="sketchpad2">
+              <img src="images/projects/sketchpad2.gif" alt="sketchpad2">
             </div>
           </div>
           <!-- Carousel Controls-->
@@ -461,7 +464,7 @@
               <img src="images/projects/amazon.jpg" alt="amazon1">
             </div>
             <div class="item">
-              <img src="images/projects/amazon2.jpg" alt="amazon2">
+              <img src="images/projects/amazon2.gif" alt="amazon2">
             </div>
           </div>
           <!-- Carousel Controls-->
@@ -480,7 +483,7 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="https://donutdaniel.github.io/downloads/amazon" class="btn btn-primary modal-btn">Executable</a>
+          <a href="" class="btn btn-primary modal-btn" data-dismiss="modal">Close</a>
         </div>
       </div>
     </div>
