added descriptions for projects

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           </a>
         </div>
         <div class="modal-body-text text-center">
-          <p>Text Here</p>
+          <p>Magoose game is a side scrolling game with the objective of consuming items on the screen while avoiding deadly cacti. The more you eat the more projectiles you earn larger you grow. WASD to move, Space to shoot. It's completely written in javascript with the p5 (processing for javascript) and p5.play library.</p>
         </div>
       </div>
       <div class="modal-footer">
@@ -293,7 +293,7 @@
           </a>
         </div>
         <div class="modal-body-text text-center">
-          <p>Text Here</p>
+          <p>A fully functioning alarm clock, it allows users to set and the time and date as well as read the temperature of the room and outside if connected to another temperature module. The project was built with the arduino and coded in C.</p>
         </div>
       </div>
       <div class="modal-footer">
@@ -338,7 +338,7 @@
           </a>
         </div>
         <div class="modal-body-text text-center">
-          <p>Text Here</p>
+          <p>Dodge or Die is game where the goal is to reach the top of the screen. The trick is to kill yourself using the white blocks, and on the next life you can climb on top of your previous body which has not gone away (this was originally a bug, but now a feature!). See README for instructions. Written in javascript using the p5 and p5.play libraries.</p>
         </div>
       </div>
       <div class="modal-footer">
@@ -387,7 +387,7 @@
           </a>
         </div>
         <div class="modal-body-text text-center">
-          <p>Text Here</p>
+          <p>The Farnsworth–Hirsch fusor here uses electrostatic containment to attain nuclear fusion in a relatively small machine. Purple glow comes from the plasma in the near vacuum chamber while collsions happen in the center. Built completely from scratch, this project allowed me to explore new areas circuitry and machining.</p>
         </div>
       </div>
       <div class="modal-footer">
@@ -432,7 +432,7 @@
           </a>
         </div>
         <div class="modal-body-text text-center">
-          <p>Text Here</p>
+          <p>This web application is a simple sketchpad, where you can draw dots, have them point to the center as lines, or animate them. Animating it with too many dots can stress the computer, so it's best to limit the number of dots before animating. It's built with JavaScript and FireBase so anyone on the same page can draw on the same canvas.</p>
         </div>
       </div>
       <div class="modal-footer">
@@ -478,7 +478,7 @@
           </a>
         </div>
         <div class="modal-body-text text-center">
-          <p>Text Here</p>
+          <p>My school final project, Amazon, is a mockup of the popular online marketplace Amazon. It allows for efficient database manipulation — searches, purchases, and recommendations. It's written in C++ using the QT framework for the GUI.</p>
         </div>
       </div>
       <div class="modal-footer">
