href attribute instead of data-target for mobile reliability

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" data-toggle="modal" data-target="#modal1">
+          <a class="card-link" data-toggle="modal" href="#modal1">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -108,7 +108,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" data-toggle="modal" data-target="#modal2">
+          <a class="card-link" data-toggle="modal" href="#modal2">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -119,7 +119,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" data-toggle="modal" data-target="#modal3">
+          <a class="card-link" data-toggle="modal" href="#modal3">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -130,7 +130,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" data-toggle="modal" data-target="#modal4">
+          <a class="card-link" data-toggle="modal" href="#modal4">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -141,7 +141,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" data-toggle="modal" data-target="#modal5">
+          <a class="card-link" data-toggle="modal" href="#modal5">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -152,7 +152,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" data-toggle="modal" data-target="#modal6">
+          <a class="card-link" data-toggle="modal" href="#modal6">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -252,8 +252,8 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="https://donutdaniel.github.io/projects/fall16/magoose_game/" class="btn btn-primary modal-btn">Demo</a>
-          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/fall16/magoose_game" class="btn btn-primary modal-btn">Code</a>
+          <a href="https://donutdaniel.github.io/projects/fall16/magoose_game/" class="btn btn-primary modal-btn" target="_blank">Demo</a>
+          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/fall16/magoose_game" class="btn btn-primary modal-btn" target="_blank">Code</a>
         </div>
       </div>
     </div>
@@ -298,7 +298,7 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="https://github.com/donutdaniel/clock" class="btn btn-primary modal-btn">Code</a>
+          <a href="https://github.com/donutdaniel/clock" class="btn btn-primary modal-btn" target="_blank">Code</a>
         </div>
       </div>
     </div>
@@ -343,8 +343,8 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="https://donutdaniel.github.io/projects/summer16/dodge_or_die/" class="btn btn-primary modal-btn">Demo</a>
-          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/summer16/dodge_or_die" class="btn btn-primary modal-btn">Code</a>
+          <a href="https://donutdaniel.github.io/projects/summer16/dodge_or_die/" class="btn btn-primary modal-btn" target="_blank">Demo</a>
+          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/summer16/dodge_or_die" class="btn btn-primary modal-btn" target="_blank">Code</a>
         </div>
       </div>
     </div>
@@ -392,7 +392,7 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="downloads/fusor.mp4" class="btn btn-primary modal-btn" download>Download Video</a>
+          <a href="downloads/fusor.mp4" class="btn btn-primary modal-btn">Full Video</a>
         </div>
       </div>
     </div>
@@ -437,8 +437,8 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="https://donutdaniel.github.io/projects/summer16/sketchpad/" class="btn btn-primary modal-btn">Demo</a>
-          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/summer16/sketchpad" class="btn btn-primary modal-btn">Code</a>
+          <a href="https://donutdaniel.github.io/projects/summer16/sketchpad/" class="btn btn-primary modal-btn" target="_blank">Demo</a>
+          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/summer16/sketchpad" class="btn btn-primary modal-btn" target="_blank">Code</a>
         </div>
       </div>
     </div>
