--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="col-md-6">
           <h2 id="about-caption" class="text-center">Hi! I like to code, build things, and make friends.</h2><br>
-          <p id="about-text" class="text-left">My name is Daniel and I am currently a sophomore studying Computer Science and Engineering at the <a href="http://www.usc.edu/">University of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br><br>I'm always looking forward to learning more through challenging myself with projects and work outside of school. This summer, I plan to continue expanding my area of expertise by delving into new technologies as well as further developing proficient ones.<br><br>When I'm not slaving away at the computer or electrocuting myself, I enjoy playing video games, volleyball, and setting things on fire (safely)!</p><br>
+          <p id="about-text" class="text-left">My name is Daniel (or Hsiao Tung) and I am currently a sophomore studying Computer Science and Engineering at the <a href="http://www.usc.edu/">University of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br><br>I'm always looking forward to learning more through challenging myself with projects and work outside of school. This summer, I plan to continue expanding my area of expertise by delving into new technologies as well as further developing proficient ones.<br><br>When I'm not slaving away at the computer or electrocuting myself, I enjoy playing video games, volleyball, and setting things on fire (safely)!</p><br>
         </div>
       </div>
     </div>
@@ -199,7 +199,7 @@
       <div class="row social-row">
         <div class="col-lg-12 col-md-12 col-xs-12">
           <ul class="list-inline">
-            <li><a href="downloads/resume_ho.pdf" class="btn btn-social" download><i class="fa fa-file-text-o fa-2x"></i></a></li>
+            <li><a href="downloads/resume.pdf" class="btn btn-social" download><i class="fa fa-file-text-o fa-2x"></i></a></li>
             <li><a href="https://www.linkedin.com/in/danielho54/" class="btn btn-social"><i class="fa fa-linkedin fa-2x"></i></a></li>
             <li><a href="https://github.com/donutdaniel" class="btn btn-social"><i class="fa fa-github fa-2x"></i></a></li>
             <li><a href="https://codepen.io/donutdaniel/" class="btn btn-social"><i class="fa fa-codepen fa-2x"></i></a></li>
