--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="row social-row">
         <div class="col-lg-12 col-md-12 col-xs-12">
           <ul class="list-inline">
-            <li><a href="downloads/resume.pdf" class="btn btn-social" download><i class="fa fa-file-text-o fa-2x"></i></a></li>
+            <li><a href="downloads/resume.pdf" class="btn btn-social"><i class="fa fa-file-text-o fa-2x"></i></a></li>
             <li><a href="https://www.linkedin.com/in/danielho54/" class="btn btn-social"><i class="fa fa-linkedin fa-2x"></i></a></li>
             <li><a href="https://github.com/donutdaniel" class="btn btn-social"><i class="fa fa-github fa-2x"></i></a></li>
             <li><a href="https://codepen.io/donutdaniel/" class="btn btn-social"><i class="fa fa-codepen fa-2x"></i></a></li>
