code cleanup and new resume

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<!-- Woah are you looking at my code? 
+Just kidding, I'd love to help out or collaborate! 
+Or let me know what you think... are there any changes I should make? -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,14 +15,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Font Awesome -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
 
   <!-- Preloading scripts to be used -->
-  <script src="js/gradient.js"></script>
-  <script src="js/processing.js"></script>
 </head>
 
 <!-- data-spy and data-target for Bootstrap scrollspy -->
@@ -79,7 +79,7 @@
         </div>
         <div class="col-md-6">
           <h2 id="about-caption" class="text-center">Hi! I like to code, build things, and make friends.</h2><br>
-          <p id="about-text" class="text-left">My name is Daniel (or Hsiao Tung) and I am currently a sophomore studying Computer Science and Engineering at the <a href="http://www.usc.edu/">University of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br><br>I'm always looking forward to learning more through challenging myself with projects and work outside of school. This summer, I plan to continue expanding my area of expertise by delving into new technologies as well as further developing proficient ones.<br><br>When I'm not slaving away at the computer or electrocuting myself, I enjoy playing video games, volleyball, and setting things on fire (safely)!</p><br>
+          <p id="about-text" class="text-left">My name is Daniel (or Hsiao Tung) and I am currently a sophomore studying Computer Science and Engineering at the <a href="http://www.usc.edu/">University of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br><br>I'm always looking forward to learning more through challenging myself with projects and work outside of school. As for projects, I'll almost always be working on one, so feel free to check out any current—or past—projects below!<br><br>When I'm not slaving away at the computer or electrocuting myself, I enjoy playing video games, volleyball, and crafting safe (emphasis on safe) explosives!</p><br>
         </div>
       </div>
     </div>
@@ -199,10 +199,10 @@
       <div class="row social-row">
         <div class="col-lg-12 col-md-12 col-xs-12">
           <ul class="list-inline">
-            <li><a href="downloads/resume.pdf" class="btn btn-social"><i class="fa fa-file-text-o fa-2x"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/danielho54/" class="btn btn-social"><i class="fa fa-linkedin fa-2x"></i></a></li>
-            <li><a href="https://github.com/donutdaniel" class="btn btn-social"><i class="fa fa-github fa-2x"></i></a></li>
-            <li><a href="https://codepen.io/donutdaniel/" class="btn btn-social"><i class="fa fa-codepen fa-2x"></i></a></li>
+            <li><a href="downloads/resume.pdf" target="_blank" class="btn btn-social"><i class="fa fa-file-text-o fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/danielho54/" target="_blank" class="btn btn-social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+            <li><a href="https://github.com/donutdaniel" target="_blank" class="btn btn-social"><i class="fa fa-github fa-2x"></i></a></li>
+            <li><a href="https://codepen.io/donutdaniel/" target="_blank" class="btn btn-social"><i class="fa fa-codepen fa-2x"></i></a></li>
           </ul>
         </div>
       </div>
