--- a/misc/old_site1/index.html
+++ b/misc/old_site1/index.html
@@ -27,7 +27,7 @@
         <a href="https://donutdaniel.github.io/projects/summer16/dodge">Dodge</a><br>
         <a href="https://donutdaniel.github.io/projects/summer16/dodge_or_die">Dodge or Die</a><br>
         <a href="https://donutdaniel.github.io/projects/summer16/explosions">Explosions</a><br>
-        <a href="https://donutdaniel.github.io/projects/summer16/collaborative_sketch">Collaborative Sketch</a><br>
+        <a href="https://donutdaniel.github.io/projects/summer16/sketchpad">Sketchpad</a><br>
         <h4>Fall 2016</h4>
         <a href="https://donutdaniel.github.io/projects/fall16/magoose_game">Magoose Game</a><br>
         <a href="https://donutdaniel.github.io/projects/fall16/pepe">Tribute to Pepe</a><br>
