update modal 1 to botbuilder

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@ Or let me know what you think... are there any changes I should make? -->
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
-                <h3>Magoose Game</h3>
+                <h3>BotBuilder</h3>
               </div>
             </div>
-            <img class="img-responsive" src="images/projects/magoose.jpg" alt="Card Image">
+            <img class="img-responsive" src="images/projects/botbuilder.jpg" alt="Card Image">
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
@@ -214,12 +214,12 @@ Or let me know what you think... are there any changes I should make? -->
 
 <!-- Modals for Projects -->
 
-<!-- Modal1: Magoose -->
+<!-- Modal1: BotBuilder -->
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Magoose Game</h5>
+        <h5 class="modal-title">BotBuilder</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <i class="fa fa-times"></i>
         </button>
@@ -230,10 +230,10 @@ Or let me know what you think... are there any changes I should make? -->
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item active">
-              <img src="images/projects/magoose.jpg" alt="magoose1">
+              <img src="images/projects/botbuilder.jpg" alt="botbuilder1">
             </div>
             <div class="item">
-              <img src="images/projects/magoose2.jpg" alt="magoose2">
+              <img src="images/projects/botbuilder2.jpg" alt="botbuilder2">
             </div>
           </div>
           <!-- Carousel Controls-->
@@ -247,13 +247,12 @@ Or let me know what you think... are there any changes I should make? -->
           </a>
         </div>
         <div class="modal-body-text text-center">
-          <p>Magoose game is a side scrolling game with the objective of consuming items on the screen while avoiding deadly cacti. The more you eat the more projectiles you earn larger you grow. WASD to move, Space to shoot. It's completely written in javascript with the p5 (processing for javascript) and p5.play library.</p>
+          <p>Chatbot creation platform. Users can build, save, and deploy their own chatbot using an online system. The chatbot, stored and represented as a directed graph, can store an endless number of pathways that can be explored through natural language processing and/or option buttons. The website features local authentication and graph interfaces. Built with Node.js, Express, SQL, Microsoft LUIS and Bot Framework, vis.js, and deployed on Microsoft Azure.</p>
         </div>
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="https://donutdaniel.github.io/projects/fall16/magoose_game/" class="btn btn-primary modal-btn" target="_blank">Demo</a>
-          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/fall16/magoose_game" class="btn btn-primary modal-btn" target="_blank">Code</a>
+          <a href="https://github.com/donutdaniel/bot" class="btn btn-primary modal-btn" target="_blank">Code</a>
         </div>
       </div>
     </div>
