--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ Or let me know what you think... are there any changes I should make? -->
           <img id="profile-picture" class="circular" src="images/profile.jpg"/>
         </div>
         <div class="col-md-6">
-          <h2 id="about-caption" class="text-center">Hi! I like to code, build things, and make friends.</h2><br>
-          <p id="about-text" class="text-left">My name is Daniel (or Hsiao Tung) and I am currently a sophomore studying Computer Science and Engineering at the <a href="http://www.usc.edu/">University of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br><br>I'm always looking forward to learning more through challenging myself with projects and work outside of school. As for projects, I'll almost always be working on one, so feel free to check out any current—or past—projects below!<br><br>When I'm not slaving away at the computer or electrocuting myself, I enjoy playing video games, volleyball, and crafting safe (emphasis on safe) explosives!</p><br>
+          <h2 id="about-caption" class="text-center">Hi! I like to code, build things, and make friends.</h2><br/>
+          <p id="about-text" class="text-left">My name is Daniel (or Hsiao Tung) and I am currently a sophomore studying Computer Science and Engineering at the <a href="http://www.usc.edu/">University of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br/><br/>I'm always looking forward to learning more through challenging myself with projects and work outside of school. As for projects, I'll almost always be working on one, so feel free to check out any current—or past—projects below!<br/><br/>When I'm not slaving away at the computer or electrocuting myself, I enjoy playing video games, volleyball, and crafting safe (emphasis on safe) explosives!</p><br/>
         </div>
       </div>
     </div>
