--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- Woah are you looking at my code? 
-Just kidding, I'd love to help out or collaborate! 
-Or let me know what you think... are there any changes I should make? -->
+<!-- yup this is my code. I need to update it. -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,7 +77,7 @@ Or let me know what you think... are there any changes I should make? -->
         </div>
         <div class="col-md-6">
           <h2 id="about-caption" class="text-center">Hi! I like to code, build things, and make friends.</h2><br/>
-          <p id="about-text" class="text-left">My name is Daniel and I am currently a junior studying Computer Science at the <a href="http://www.usc.edu/">University of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br/><br/>I'm always looking forward to learning more through challenging myself with projects and work outside of school. As for projects, I'll almost always be working on one, so feel free to check out any current—or past—projects below!<br/><br/>Outside of work, I enjoy playing video games, volleyball, and making hardware projects!</p><br/>
+          <p id="about-text" class="text-left">My name is Daniel and I am currently a senior studying Computer Science and Linguistics at the <a href="http://www.usc.edu/">University of Southern California</a>. I don't even know if people even read this kind of stuff, but I'll take this time to say that this website is suuuuper outdated. I haven't updated anything except my resume and this text in the past 3 years, and even I don't like what I wrote 3 years ago.<br/><br/>You can follow me anyhow, and check out some projects below!</p><br/>
         </div>
       </div>
     </div>
@@ -207,7 +205,7 @@ Or let me know what you think... are there any changes I should make? -->
         </div>
       </div>
       <div class="row" id="footnotes">
-        <p><i class="fa fa-copyright"></i> 2018 Daniel Ho</p>
+        <p><i class="fa fa-copyright"></i> 2019 Daniel Ho</p>
       </div>
     </div>
   </footer>
