--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-xs-12">
-        <a id="projects-btn" class="btn btn-default" href="https://donutdaniel.github.io/misc/old_site1">More Projects</a>
+        <a id="projects-btn" class="btn btn-default" href="https://donutdaniel.github.io/website-2015">More Projects</a>
         </div>
       </div>
     </div>
@@ -340,8 +340,8 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="https://donutdaniel.github.io/projects/summer16/dodge_or_die/" class="btn btn-primary modal-btn" target="_blank">Demo</a>
-          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/summer16/dodge_or_die" class="btn btn-primary modal-btn" target="_blank">Code</a>
+          <a href="https://donutdaniel.github.io/website-2015/projects/summer16/dodge_or_die/" class="btn btn-primary modal-btn" target="_blank">Demo</a>
+          <a href="https://github.com/donutdaniel/website-2015/tree/master/projects/summer16/dodge_or_die" class="btn btn-primary modal-btn" target="_blank">Code</a>
         </div>
       </div>
     </div>
@@ -434,8 +434,8 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <a href="https://donutdaniel.github.io/projects/summer16/sketchpad/" class="btn btn-primary modal-btn" target="_blank">Demo</a>
-          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/summer16/sketchpad" class="btn btn-primary modal-btn" target="_blank">Code</a>
+          <a href="https://donutdaniel.github.io/website-2015/projects/summer16/sketchpad/" class="btn btn-primary modal-btn" target="_blank">Demo</a>
+          <a href="https://github.com/donutdaniel/website-2015/tree/master/projects/summer16/sketchpad" class="btn btn-primary modal-btn" target="_blank">Code</a>
         </div>
       </div>
     </div>
